# mylife-in-data

./: .gitignore  CLAUDE.md  DATA_MODEL.md  DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  Makefile  OPERATIONS.md  PIPELINES.md  README.md  SYNC_TO_VM.md  pyproject.toml
.claude/agents/: reviewer.md
.claude/commands/: audit.md  dashboard.md  deploy.md
.github/workflows/: ci.yml
dashboard/: .env.development  .env.development.example  DESIGN.md  PRODUCT.md  README.md  REVIEW.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/.impeccable/: design.json
dashboard/public/: _redirects
data_exploration/: README.md
docs/: DATA_MODEL.md  DEPLOY.md  OPERATIONS.md  SYNC_TO_VM.md  deployment.md
exploration/: .gitignore  requirements.txt
infrastructure/: .env.example  README.md  cleanup.sh  deploy.sh  start-all.sh  stop-all.sh
scripts/: backfill_calendar_history.py  backfill_spotify_catalog.py  bootstrap_google_auth.py  check_audio_features.py  check_stream_contract.py  dev_clean.sh  import_google_takeout.py  import_maps_timeline_export.py  import_spotify_extended_history.py  init_warehouse.py  probe_maps_data_portability.py  restore_warehouse_from_r2.py  set_home_location.py  sync_tokens_from_vm.sh  test_google_connection.py  test_r2_connection.py  verify_phase_0.py  verify_phase_1.py  verify_phase_2.py  verify_phase_3.py  verify_phase_4.py  verify_phase_5.py  verify_phase_6.py  verify_phase_7.py  verify_phase_8.py
transformations/: .env.example  .gitignore  dbt_project.yml  packages.yml  profiles.yml  profiles.yml.example
(+533 files in other folders)
